--- a/Portfolio/Design/styles/module/_global.scss
+++ b/Portfolio/Design/styles/module/_global.scss
@@ -29,10 +29,10 @@ body {
     padding-left: toRem(32);
     padding-right: toRem(32);
 
-    // @include responsive(phone) {
-    //     padding-left: toRem(16);
-    //     padding-right: toRem(16);
-    // }
+    @include responsive(phone) {
+        padding-left: toRem(16);
+        padding-right: toRem(16);
+    }
 }
 
 .header-section {
@@ -196,6 +196,9 @@ body {
             padding: toRem(16);
             border: toRem(1) solid rgb(32, 34, 39);
             text-align: left;
+             @include responsive(phone-end-480) {
+                  flex-direction: column;
+            }
 
             h2 {
                 font-size: toRem(20);
@@ -220,6 +223,7 @@ body {
 
         @include responsive(phone) {
             grid-template-columns: 1fr;
+            width: 100%;
         }
 
         .about-tab {
