--- a/Portfolio/Design/styles/module/_global.scss
+++ b/Portfolio/Design/styles/module/_global.scss
@@ -13,7 +13,7 @@ html {
 
 body {
     font-size: 1rem;
-    font-family: $font-family-mono;
+    font-family: $font-family;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: $body-bg-color;
