--- a/Portfolio/Design/styles/main.css
+++ b/Portfolio/Design/styles/main.css
@@ -157,7 +157,7 @@ html {
 
 body {
   font-size: 1rem;
-  font-family: "Roboto Serif", serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #0c0e13;
