--- a/Portfolio/Design/styles/base/_variables.scss
+++ b/Portfolio/Design/styles/base/_variables.scss
@@ -1,5 +1,5 @@
 // $font-family-mono: "Roboto Mono", monospace;
-$font-family: 'Montserrat', sans-serif;
+$font-family: 'Poppins', sans-serif;
 
 // Brand Colors
 $primary:           #CDE4FE;
