--- a/Portfolio/Design/styles/module/_global.scss
+++ b/Portfolio/Design/styles/module/_global.scss
@@ -19,6 +19,9 @@ body {
     background: $body-bg-color;
     min-height: 100vh; // Temporary purpose
     padding: toRem(32) 0;
+     @include responsive(phone) {
+        font-size: 15px;
+     }
 }
 
 .container {
@@ -33,25 +36,6 @@ body {
         padding-left: toRem(16);
         padding-right: toRem(16);
     }
-      position: relative;
-  background:
-    linear-gradient(
-      180deg,
-      rgba(32, 34, 39, 0) 0%,
-      rgba(157, 157, 157, 0.5) 26.57%,
-      rgba(157, 157, 157, 0.5) 50%,
-      rgba(157, 157, 157, 0.5) 76.12%,
-      rgba(32, 34, 39, 0) 100%
-    ) left center / 1px 100% no-repeat,
-    linear-gradient(
-      180deg,
-      rgba(32, 34, 39, 0) 0%,
-      rgba(157, 157, 157, 0.5) 26.57%,
-      rgba(157, 157, 157, 0.5) 50%,
-      rgba(157, 157, 157, 0.5) 76.12%,
-      rgba(32, 34, 39, 0) 100%
-    ) right center / 1px 100% no-repeat;
-  background-repeat: no-repeat;
 }
 
 .header-section {
