--- a/Portfolio/Design/styles/base/_variables.scss
+++ b/Portfolio/Design/styles/base/_variables.scss
@@ -1,5 +1,5 @@
-// $font-family-mono: "Roboto Mono", monospace;
-$font-family: 'Roboto', sans-serif;
+$font-family-mono: "Roboto Mono", monospace;
+
 
 // Brand Colors
 $primary:           #CDE4FE;
