--- a/Portfolio/Design/styles/module/_global.scss
+++ b/Portfolio/Design/styles/module/_global.scss
@@ -7,21 +7,18 @@
 }
 
 html {
-    font-size: 16px;
+    font-size: 1rem;
     scroll-behavior: smooth;
 }
 
 body {
     font-size: 1rem;
-    font-family: $font-family;
+    font-family: $font-family-mono;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: $body-bg-color;
     min-height: 100vh; // Temporary purpose
     padding: toRem(32) 0;
-     @include responsive(phone) {
-        font-size: 15px;
-     }
 }
 
 .container {
