--- a/Portfolio/Design/styles/main.css
+++ b/Portfolio/Design/styles/main.css
@@ -199,6 +199,23 @@ body {
   opacity: 1;
   font-weight: 600;
 }
+.hero-content .look-button {
+  display: inline-block;
+  text-decoration: none;
+  border: 0.0625rem solid #0c0e13;
+  background-color: #CDE4FE;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.5rem;
+  box-shadow: rgba(205, 228, 254, 0.5) 0px 0px 5px 0px;
+  opacity: 1;
+  font-weight: 600;
+  color: #CDE4FE;
+}
+.hero-content .hero-buttons {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
 
 .about-me {
   padding: 3rem 0;
