--- a/Portfolio/Design/styles/module/_global.scss
+++ b/Portfolio/Design/styles/module/_global.scss
@@ -63,11 +63,10 @@ body {
             opacity: 1;
             font-weight: $font-weight-bold;
         }
-         .look-button {
+         .look-work {
             display: inline-block;
             text-decoration: none;
             border: toRem(1) solid $body-bg-color;
-            background-color: $primary;
             padding: toRem(12) toRem(24);
             border-radius: toRem(8);
             box-shadow: rgba(205, 228, 254, 0.5) 0px 0px 5px 0px;
@@ -80,6 +79,7 @@ body {
             display: flex;
             align-items: center;
             gap: toRem(16);
+            flex-wrap: wrap;
         }
     }
 }
