--- a/Portfolio/Design/styles/module/_global.scss
+++ b/Portfolio/Design/styles/module/_global.scss
@@ -46,10 +46,13 @@ body {
     &-content {
         color: $gray2;
         padding: toRem(48) 0;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
 
         .wish-tag,
         .intro-tag {
-            margin: toRem(16) 0;
+            // margin: toRem(16) 0;
         }
 
         .look-resume {
